# mamorurs-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  devnet.settings.toml
.github/actions/install-deps/: action.yml
.github/workflows/: CI.yml  release.yml  release2.yml
cred-store/: Cargo.toml
cred-store/src/: file_store.rs  lib.rs
src/: client.rs  config.rs  daemon_builder.rs  errors.rs  input.rs  light_client.rs  main.rs  manifest.rs
src/auth/: get_token.rs  jwtverifier.rs  mod.rs
src/commands/: login.rs  logout.rs
src/commands/agent/: assign.rs  launch.rs  mod.rs  new.rs  publish.rs  unregister.rs
