[package]
name = "mamorurs-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
no-ssl = ["cargo-generate"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "cargo"] }
cosmrs = { git = "https://github.com/Mamoru-Foundation/cosmos-rust.git", rev = "6761b0874b0bb73a01d6fecddf90ecb58abc7b03" }
url = "2.5.0"
base64 = "0.22.1"
tonic = { version = "0.9", default-features = false, features = ["tls", "gzip"] }
tokio = { version = "1.38.0", features = ["full"] }
dirs = "5.0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mamoru-chain-client = { git = "https://github.com/Mamoru-Foundation/mamoru-core.git", rev = "468f81daf0627d12d8498a6a7e150857d6ba5c87"}
#mamoru-chain-client = { path =  "../mamoru-core/chain-client"}
cred-store = { path = "cred-store" }
serde_yaml = "0.9.34"
serde = { version = "1.0.203", features = ["derive"] }
cargo-generate = { version = "0.21.0", features = ["vendored-libgit2"], optional = true }
serde_json = "1.0.117"
config = "0.14.0"
open = "5.1.4"
spinners = "4.1.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
tracing = "0.1.40"
dialoguer = "0.11.0"
inline_colorization = "0.1.6"
toml = "0.8.14"
futures = "0.3.30"


[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
mockito = "0.29.0"
sealed_test = "1.1.0"
